workflow: temp disable main workflow on dev until libnx pushes a new release.

--- a/.github/workflows/build_presets.yml
+++ b/.github/workflows/build_presets.yml
@@ -1,6 +1,14 @@
+on: [push, pull_request]
+
 name: build
 
-on: [push, pull_request]
+on:
+  push:
+    branches-ignore:
+      - dev
+  pull_request:
+    branches-ignore:
+      - dev
 
 jobs:
   build:
