devoptab: add mounts (wrapper around all mounts, exposed via MTP/FTP). lots of fixes (see below).
- updated libhaze to 81154c1.
- increase ftpsrv stack size as it would crash when modifying custom mounts.
- fix warning for unused log data in haze.
- fix eof read for nsp/xci source by instead returning 0 for bytes read, rather than error.
- add support for lstat the root of a mount.
- handle zero size reads when reading games via devoptab.

--- a/sphaira/CMakeLists.txt
+++ b/sphaira/CMakeLists.txt
@@ -133,6 +133,7 @@ add_executable(sphaira
     source/utils/devoptab_vfs.cpp
     source/utils/devoptab_fatfs.cpp
     source/utils/devoptab_game.cpp
+    source/utils/devoptab_mounts.cpp
     source/utils/devoptab.cpp
 
     source/usb/base.cpp
@@ -399,7 +400,7 @@ endif()
 if (ENABLE_LIBHAZE)
     FetchContent_Declare(libhaze
         GIT_REPOSITORY https://github.com/ITotalJustice/libhaze.git
-        GIT_TAG 6e24502
+        GIT_TAG 81154c1
     )
 
     FetchContent_MakeAvailable(libhaze)
